fixed edit and delete button visibility

--- a/react-frontend/src/places/components/PlaceList.css
+++ b/react-frontend/src/places/components/PlaceList.css
@@ -5,3 +5,7 @@
   width: 90%;
   max-width: 40rem;
 }
+
+.place-list h2 {
+  padding-bottom: 1rem;
+}
